--- a/index.html
+++ b/index.html
@@ -29,23 +29,33 @@ h2 { font-size: 20px; margin: 12px 0; }
 .add:active { transform: scale(0.95); }
 
 .habit {
+  position: relative;
   background: rgba(255,255,255,0.05); padding: 16px; border-radius: 14px;
   margin-bottom: 12px; display: flex; flex-direction: column;
   transition: transform 0.25s cubic-bezier(0.4,0,0.2,1), opacity 0.25s ease, background 0.8s ease;
   opacity: 0; transform: translateY(20px);
 }
-.habit.show { opacity: 1; transform: translateY(0); }
 
-.habit.ice {
-  background: linear-gradient(135deg, #22c55e, #3b82f6) !important;
-  animation: iceAnim 0.8s ease forwards;
+/* Animacja lodu */
+.habit.ice::after {
+  content: "";
+  position: absolute;
+  top:0; left:0; right:0; bottom:0;
+  background: #3b82f6;
+  opacity: 0;
+  border-radius: 14px;
+  pointer-events: none;
+  animation: iceFlash 0.8s forwards;
 }
-@keyframes iceAnim {
-  0% { background: rgba(255,255,255,0.05); }
-  30% { background: #3b82f6; }
-  60% { background: #22c55e; }
-  100% { background: rgba(255,255,255,0.05); }
+
+@keyframes iceFlash {
+  0% { opacity: 0; }
+  30% { opacity: 0.6; }
+  60% { opacity: 0.6; }
+  100% { opacity: 0; }
 }
+
+.habit.show { opacity: 1; transform: translateY(0); }
 
 .habit-header { display: flex; justify-content: space-between; align-items: center; }
 .name { font-size: 18px; cursor: pointer; }
@@ -88,10 +98,12 @@ h2 { font-size: 20px; margin: 12px 0; }
   margin-bottom: 4px; visibility: hidden;
 }
 .calendar-header button {
+  visibility: hidden;
   background: #1e293b; color: white; border: none; border-radius: 4px;
   padding: 4px 12px; cursor: pointer;
 }
 .calendar.show .calendar-header { visibility: visible; }
+.calendar.show .calendar-header button { visibility: visible; }
 
 .day {
   width: 14.2%; height: 28px; margin-bottom: 2px; text-align: center;
@@ -163,8 +175,8 @@ function renderCalendar(h,monthOffset=0){
   const calHeader=document.createElement("div");
   calHeader.className="calendar-header";
 
-  const left=document.createElement("button"); left.textContent="<"; left.style.display="none";
-  const right=document.createElement("button"); right.textContent=">"; right.style.display="none";
+  const left=document.createElement("button"); left.textContent="<";
+  const right=document.createElement("button"); right.textContent=">";
   const title=document.createElement("span");
 
   let refDate=new Date();
@@ -198,12 +210,12 @@ function renderCalendar(h,monthOffset=0){
     else if(isFreeze) dayDiv.classList.add("freeze");
     else if(isMissed) dayDiv.classList.add("missed");
 
-    dayDiv.onclick = () => {
-      if(h.freeze) return; // blokada zamrożonych
+    dayDiv.addEventListener('pointerdown', () => {
+      if(h.freeze) return;
       if(isDone) h.datesDone=h.datesDone.filter(d=>d!==dayStr);
       else { if(!h.datesDone) h.datesDone=[]; h.datesDone.push(dayStr);}
       save(); render();
-    };
+    });
 
     calDiv.appendChild(dayDiv);
   }
@@ -250,10 +262,6 @@ function render(){
       const cal = calendarDiv.querySelector(".calendar");
       cal.classList.toggle("show");
       toggleBtn.textContent= cal.classList.contains("show")?"📅 Ukryj kalendarz":"📅 Pokaż kalendarz";
-
-      // przyciski przewijania tylko po rozwinięciu
-      const btns = calendarDiv.querySelectorAll(".calendar-header button");
-      btns.forEach(b => b.style.display = cal.classList.contains("show") ? "inline-block" : "none");
     };
 
     div.querySelector(".done").onclick = ()=>{
