Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Keppy - Keep Going</title>
+<title>Keepy - Keep Going</title>
 <link rel="icon" href="icon.png">
 <style>
 body {
@@ -308,3 +308,4 @@ render();
 </script>
 </body>
 </html>
+
